добавления пользователя в бд /api/user_v1/

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@ https://www.coursera.org/learn/sql"></textarea>
       };
 
       try {
-        const res = await fetch("/api/user_v1/add_user", {
+        const res = await fetch("/api/user_v1/", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(data)
